--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  background: linear-gradient(-45deg, #3c86e7, #3c86e7, #000000, #000000);
+  background: linear-gradient(-45deg, #4c8bf5, #4c8bf5, #000000, #000000);
   background-size: 700% 700%;
   animation: gradient 20s ease infinite;
 }
